--- a/dev.html
+++ b/dev.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<base href="/">
+<base href="/dev/">
 <title>Valley Forge Fabrics</title>
 <meta http-equiv="Content-Type" content="text/html;" />
 <meta charset="utf-8">
